@@ -1,3 +1,8 @@
+2020-08-06  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ball/upnp/RootDevice.java:
+	Added notify(BiConsumer<URI,URI>) default method.
+
 2020-08-05  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ball/upnp/ssdp/SSDPRequest.java,
